Added supervised notes

--- a/data119.ipynb
+++ b/data119.ipynb
@@ -29,6 +29,47 @@
     "- Dendrograms Terminology\n",
     "    - The earlier fusions occur, the more similar the groups are"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Supervised Learning:\n",
+    "- Numeric -> linear regression\n",
+    "    - SLS \n",
+    "        - sum (Yi - yi)^2\n",
+    "        - pen and paper\n",
+    "    - OLS \n",
+    "        - Multiple x values\n",
+    "        - Uses linear algebra to find answers \n",
+    "    - Regularization(optimization):\n",
+    "        - Ridge:\n",
+    "            - sum [(beta)^2]\n",
+    "        - LASSO:\n",
+    "            - sum [(1/c) abs(beta)]\n",
+    "            - does feature selection\n",
+    "    - Odds: P / 1 - P\n",
+    "        - for example -> (1/6) / (5/6) = 1/5\n",
+    "    - (Y - Y mean) / (Y std) = pure correlation constant \n",
+    "- Binary (0, 1) -> logistic regression\n",
+    "    - Sigmoid function (of the equation)\n",
+    "    - Should be able to sketch them\n",
+    "    - Loss Function = SSE = sum (Y - y)^2 where Y is predicted and y is actual \n",
+    "    - RMSE = sqrt(SSE / N)\n",
+    "- Multiclass -> generalized logistic regression\n",
+    "- Complex (image, waveform) -> KNN, CART, neural networks \n",
+    "- Draw a neural network (from geometry and code)\n",
+    "- Single linkage: use min dist\n",
+    "- Complete linkage: use max dist \n",
+    "- Average linkage: use avg dist\n",
+    "- Accuracy:\n",
+    "    - (TP + TN) / total \n",
+    "- Misclassification:\n",
+    "    - (FP + FN) / total \n",
+    "- TP, TN - sensitivity\n",
+    "- FP - actual no \n"
+   ]
   }
  ],
  "metadata": {
